Add xps peak file

--- a/Sections/1_Introduction/AmmoniaOxidation.tex
+++ b/Sections/1_Introduction/AmmoniaOxidation.tex
@@ -126,7 +126,7 @@ This \textit{activation process} leads to an increase selectivity towards \ce{NO
     \label{fig:Gauzes}
 \end{figure}
 
-The deactivation of Pt-Rh industrial catalysts after long exposure times have been explained by the presence of rhodium oxides \parencite{Bergene1996}.
+The deactivation of Pt-Rh industrial catalysts after long exposure times have been explained by rhodium enrichment and the presence of rhodium oxides \parencite{Fierro1992, Bergene1996}.
 However, a deactivation process was also reported on pure Pt catalyst \parencite{Ostermaier1974}, linked to the presence of platinum oxides \parencite{Ostermaier1976}.
 
 The role of volatile surface oxides in the roughening and etching of the catalyst surface was theorised by Wei et al. \parencite*{Wei1996} and confirmed experimentally by Nilsen et al. \parencite*{Nilsen2001}.
@@ -152,9 +152,10 @@ At UHV, a rotated hexagonal reconstruction on top of Pt (100) was found to impin
 % steps
 The importance of atomic steps in the catalytic activity was first revealed by Gland et al. \parencite*{Gland1978, Gland1980}.
 A more recent study of the oxidation of ammonia on several model catalysts (Pt(533), Pt(443), Pt(865), Pt(100), Pt foil) to investigate the structure selectivity by Yingfeng \parencite*{Yingfeng2008} linked the presence of steps and kinks with higher catalytic activity in the \qtyrange{1e-9}{1e-5}{\bar} range.
+Similar results have been revealed that the Pt (533) is 2 to 4 times more active than Pt (443) below \qty{1e-5}{\bar} \parencite{Scheibe2005}.
 Moreover, the production of \ce{N_2} was reported to be promoted by lower temperatures and a reduced \ce{O_2}/\ce{NH_3} ratio in the incoming gas flow, while higher temperatures and an elevated \ce{O_2}/\ce{NH_3} ratio tend to result in a higher selectivity towards the formation of \ce{NO} \parencite{Zeng2009}.
 No production of \ce{N_2O} was observed within the studied pressure range.
-The importance of steps at ambient pressure was revealed to be most important when aiming at producing \ce{N_2} at low temperature, but could not be correlated to an increase in \ce{NO} production at high temperature in a comparative study of the Pt(111) and Pt(211) surfaces.
+The importance of steps at ambient pressure was revealed to be most important when aiming at producing \ce{N_2} at low temperature, but could not be correlated to an increase in \ce{NO} production at high temperature in a comparative study of the Pt(111) and Pt(211) surfaces \parencite{Ma2019}.
 It was shown that the adsorbed \ce{NH_3} hopping rate is close to its desorption rate on Pt (111) terrace sites, making it unlikely to reach the steps where it may react rather than desorb from the catalyst surface \parencite{Borodin2021}.
 
 % tap, kinetic studies
