--- a/Sections/4_Results_SingleCrystals/100.tex
+++ b/Sections/4_Results_SingleCrystals/100.tex
@@ -160,6 +160,8 @@ It is possible that the (10x10)-type reconstructions observed in the current exp
 Lowering the partial pressure of oxygen from \qty{80}{\milli\bar} to \qty{5}{\milli\bar} in the reactor has completely removed the square (10x10) reconstruction phenomena and revealed the existence of two hexagonal arrangements on top on the Pt (100) surface (fig. \ref{fig:MapsAndLScansPt100LowOxAmmonia}), with an in-plane lattice parameter equal to \qty{2.685}{\angstrom}, \qty{\approx 3.36}{\percent} lower than the distance between neighbouring Pt atoms on the Pt (100) surface.
 Second order peaks can also be seen at the edge of the reciprocal space in-plane map, each domain has one axis parallel to either $\vec{a}_{(100)}$ or $\vec{b}_{(100)}$, \textit{i.e.} respectively in the [110] and [1$\bar{1}$0] directions.
 
+% precursor to bulk is chemisrobed \parencite{BradleyShumbera2007}
+
 Different hexagonal surface reconstructions on the Pt (100) surface have been reported also in the [110] direction at UHV conditions, summarised in \cite{Hammer2016}, based on an important body of work \parencite{Heilmann1979, Vanhove1981, Heinz1982, Mase1992, Kuhnke1992, Borg1994, VanBeurden2004, Havu2010}, evolving to rotated hexagonal reconstructions with angles between \ang{0.77} and \ang{0.94} depending on the sample temperature and on the previous temperature treatment.
 The unit cell describing those reconstructions with respect to the Pt (100) surface varies, if first contained to (5XN) where N = 20–30, the latest study reports a commensurate c(26X118) superstructure.
 Exposition of the rotated hexagonal structure to oxygen at \qty{450}{\degreeCelsius} studied by low energy electron diffraction (LEED) has been found to remove the hexagonal structure and precipitate the growth of surface oxides \textit{via} different phases \parencite{BradleyShumbera2007, BradleyShumbera2007a}, a similar conclusion was reached by \cite{Deskins2005} by DFT studies.
