--- a/Sections/4_Results_SingleCrystals/Introduction.tex
+++ b/Sections/4_Results_SingleCrystals/Introduction.tex
@@ -22,7 +22,7 @@ Reflectivity curves were also carried out to obtain complementary information ab
 Finally, core level photoemission spectroscopy provides different signatures for many moieties adsorbed on the surface during reactions and therefore the possibility to strengthen the links between structure, surface moieties and reaction products.
 In the intent of carrying out complementary NAP-XPS experiments to extend such concept to pure components of the standard catalyst, and to link internal stresses/surface-relaxations obtained from specific crystalline structures with the chemistry on its surfaces, the same Pt (111) and Pt (100) samples are used for both SXRD and NAP-XPS.
 For each combination of temperature and ammonia to oxygen ratio, the O1s, N1s, and Pt4f core levels were measured, that should carry information of the surface state, to establish a connection between selectivity, surface moieties, and internal stress.
-The Fermi edge is also measured after each core level to be able to find the zero kinetic energy.
+The Fermi edge is also measured after each core level to be able to find the zero binding energy.
 
 The oxidation of ammonia on single crystals was measured at \qty{450}{\degreeCelsius}, a temperature after the catalyst light-off.
 Higher temperatures were avoided in favour of the setup life expectancy in the aggressive reaction environment and the long time required to perform all the measurements.
