--- a/references.bib
+++ b/references.bib
@@ -82,6 +82,19 @@ issn={1476-4660},
 doi={10.1038/nmat4842},
 }
 
+@article{Sugai1993,
+title = {Adsorption and dissociation of NO on Pt(100) and (310) studied by AES, UPS and XPS},
+journal = {Surface Science},
+volume = {282},
+number = {1},
+pages = {67-75},
+year = {1993},
+issn = {0039-6028},
+doi = {https://doi.org/10.1016/0039-6028(93)90610-V},
+author = {Shigeru Sugai and Koji Takeuchi and Takahisa Ban and Hirofumi Miki and Koji Kawasaki and Toshihide Kioka},
+abstract = {Adsorption states of nitric oxide on Pt(100) and Pt(310) surfaces were studied by Auger electron spectroscopy (AES), ultraviolet and X-ray photoelectron spectroscopy (UPS and XPS). The molecular NO and the dissociated N and O atoms coexist on both the platinum surfaces at room temperature. As the temperature rises, a part of the molecules desorbs quickly and another part decomposes into N and O up to 420 K for Pt(100) and 400 K for Pt(310). The N atoms desorb as N2 up to 420 K. A part of the dissociated O atoms penetrates into a few atomic layers of the platinum crystals up to about 600 K, and they diffuse back to the surface with the thermal desorption of O2 at higher temperatures. The Pt(310) surface is slightly more active for the N-O bond breaking than Pt(100), and less than Pt(410).}
+}
+
 @article{Avanesian2017,
 author={Avanesian, Talin and Dai, Sheng and Kale, Matthew J. and Graham, George W. and Pan, Xiaoqing and Christopher, Phillip},
 title={Quantitative and Atomic-Scale View of CO-Induced Pt Nanoparticle Surface Reconstruction at Saturation Coverage via DFT Calculations Coupled with in Situ TEM and IR},
@@ -153,6 +166,34 @@ abstract = {Publisher Summary
 This chapter examines how atoms are arranged in main engineering solids. Many engineering materials (almost all metals and ceramics, for instance) are made up entirely of small crystals or grains in which atoms are packed in regular, repeating, three-dimensional patterns; the grains are stuck together meeting at grain boundaries. This chapter focuses on the individual crystals that can be best understood by thinking of the atoms as hard spheres. The chapter also discusses close-packed structures and crystal energies followed by crystallography, plane indices, and direction indices. The chapter concludes with a discussion of atom packing in polymers, atom packing in inorganic glasses, and the density of solids.}
 }
 
+@article{Kiskinova1985,
+title = {Adsorption and decomposition of H2O on a K-covered Pt(111) surface},
+journal = {Surface Science},
+volume = {150},
+number = {2},
+pages = {319-338},
+year = {1985},
+issn = {0039-6028},
+doi = {https://doi.org/10.1016/0039-6028(85)90649-1},
+author = {M. Kiskinova and G. Pirug and H.P. Bonzel},
+abstract = {The adsorption of H2O on clean and K-covered Pt(111) was investigated by utilizing Auger, X-ray and ultra-violet photoemission spectroscopies. The adsorption on Pt(111) at 100–150 K was purely molecular (ice formation) in agreement with previous work. No dissociation of this adsorbed H2O was noted on heating to higher temperatures. On the other hand, adsorption of H2O on Pt(111) + K leads to dissociation and to the formation of OH species which were characterized by a work function increase, an O 1s binding energy of 530.9 eV and UPS peaks at 4.7 and 8.7 eV below the Fermi level. The amount of OH formed was proportional to the K coverage for θK > 0.06 whereas no OH could be detected for θ⩽ 0.06. Dissociation of H2O occurred already at T = 100 K, with a sequential appearance of O 1s peaks at 531 and 533 eV representing OH and adsorbed H2O, respectively. At room temperature and above only the OH species was observed. Annealing of the surface covered with coadsorbed K/OH indicated the high stability of this OH species which could be detected spectroscopically up to 570 K. The adsorption energy of H2O coadsorbed with K and OH on Pt(111) is increased relative to that of H2O on Pt. The work function due to this adsorbed H2O increases whereas it decreases for H2O on Pt(111). The energy shifts of valence and O1s core levels of H2O on Pt + K as deduced from a comparison of gas phase and adsorbate spectra are 2.8–4.2 eV compared to ≈ 1.3–2.3 eV for H2O on Pt (111). This increased relaxation energy shift suggests a charge transfer screening process for H2O on Pt + K possibly involving the unoccupied 4a1 orbital of H2O. The occurrence of this mode of screening would be consistent with the higher adsorption energy of H2O on Pt + K and with its high propensity to dissociate into OH and H.}
+}
+
+@Article{Kiss1991,
+author={Kiss, J. and Lennon, D. and Jo, S. K. and White, J. M.},
+title={Photoinduced dissociation and desorption of nitrous oxide on a platinum(111) surface},
+journal={The Journal of Physical Chemistry},
+year={1991},
+month={Oct},
+day={01},
+publisher={American Chemical Society},
+volume={95},
+number={21},
+pages={8054-8059},
+issn={0022-3654},
+doi={10.1021/j100174a012},
+}
+
 @article{Parkinson2003,
 title = {Reaction of atomic oxygen with a Pt(111) surface: chemical and structural determination using XPS, CAICISS and LEED},
 journal = {Surface Science},
@@ -181,7 +222,7 @@ keywords = {Oxidation, Platinum, Atomic oxygen, Atom–solid interactions, Desor
 abstract = {The oxidation of Pt(111) by gas-phase oxygen atoms was investigated in ultrahigh vacuum using temperature programmed desorption (TPD), X-ray photoelectron spectroscopy (XPS), electron energy loss spectroscopy (ELS) and low energy electron diffraction (LEED). Atomic oxygen coverages as high as 2.9ML (monolayers) could be generated on Pt(111) using an atomic oxygen beam, and both the adsorption of oxygen atoms and the progression of surface oxygen phases with increasing atomic oxygen coverage are found to be relatively insensitive to the surface temperature over the range from 250 to 450K. The results show that oxidation involves the development of a chemisorbed layer for oxygen coverages up to about 0.75ML, and that the average binding energy of an oxygen atom chemisorbed on Pt(111) decreases significantly (∼100kJ/mol) with increasing oxygen coverage, in agreement with previous observations [D.H. Parker, M.E. Bartram, B.E. Koel, Surf. Sci. 217 (1989) 489, N.A. Saliba, Y.-L. Tsai, C. Panja, B.E. Koel, Surf. Sci. 419 (1999) 79]. Long-range order in the chemisorbed layer generally diminishes as the oxygen coverage increases above the 0.25ML saturation coverage of the p(2×2) layer, though the persistence of a (2×2) LEED pattern up to about 0.50ML is consistent with the formation of domains of a new, high-density ordered phase. Disordering within the chemisorbed layer becomes more pronounced with continued atomic oxygen adsorption to coverages greater than 0.50ML. Distinct features in the O$_2$ thermal desorption traces at 650K and 560K are attributed to the desorption of oxygen from a high-density ordered phase and disordered domains, respectively, which suggests that the binding energy is lowest for oxygen atoms chemisorbed in the disordered domains. Increasing the atomic oxygen coverage above approximately 0.75ML is shown to result in the growth of Pt oxide particles and disordering of the Pt surface. Decomposition of the Pt oxide particles produces explosive desorption of O$_2$ that is characterized by a shift of the desorption peak to higher temperature and a dramatic increase in the maximum desorption rate with increasing oxygen coverage. The main characteristics of the explosive desorption are well reproduced by a kinetic model in which oxygen atoms are assumed to migrate from oxide domains onto regions of the surface containing chemisorbed oxygen atoms, and with oxygen atoms desorbing only from the chemisorbed layer. The implication of this mechanism is that Pt oxide is more thermodynamically favorable than high concentrations of chemisorbed oxygen atoms on Pt(111), and hence that the growth of Pt oxide on Pt(111) is kinetically limited.}
 }
 
-@article{https://doi.org/10.1002/anie.201304765,
+@article{Nafion2013,
 author = {Arrigo, Rosa and Hävecker, Michael and Schuster, Manfred E. and Ranjan, Chinmoy and Stotz, Eugen and Knop-Gericke, Axel and Schlögl, Robert},
 title = {In Situ Study of the Gas-Phase Electrolysis of Water on Platinum by NAP-XPS},
 journal = {Angewandte Chemie International Edition},
@@ -194,7 +235,7 @@ abstract = {Chasing down the active state: Near-ambient-pressure X-ray photoelec
 year = {2013}
 }
 
-@article{RIENKS20021,
+@article{Rienks2002,
 title = {Interaction of nitric oxide with Pt(100). A fast X-ray photoelectron spectroscopy study},
 journal = {Surface Science},
 volume = {516},
@@ -618,6 +659,22 @@ keywords = {Ammonia oxidation, Nitric acid production, Oxide catalysts, Honeycom
 abstract = {This paper generalizes the results of long-term efforts aimed at research and development of industrial oxide catalysts for ammonia oxidation in the nitric acid production within two-bed (Pt gauzes+monolithic oxide layers) technology of the high pressure process. Main factors determining performance of precious metals and oxides in the high-temperature ammonia oxidation are considered. The surface oxygen bonding strength determined by the surface atomic structure appears to be the most important. From this point of view, existing approaches to synthesis of mixed oxide systems including perovskites with controlled nitric oxide selectivity and good stability in the high-temperature process of ammonia oxidation are analyzed. Main features of the bulk oxide monolithic catalysts production technology and principles of a two-bed system design based upon the process mathematical modeling are briefly outlined. Proven economic benefits of this technology recently commercialized in Russia at nitric acid plants are debated.}
 }
 
+@article{Ma2019,
+abstract = {Ammonia oxidation is operated at different temperatures over Pt catalysts of different structures to recover different products. In this work, we elucidate the dependency of ammonia oxidation rates and selectivities on both Pt structure and temperature. We perform density functional theory (DFT) computations to compare the reaction and activation energies of elementary reactions on Pt(211) and Pt(111). We develop a microkinetic model parametrized with the DFT results. We show that barriers to product formation are lower on stepped Pt than on terrace, leading to a much higher step rate at low temperature to selectively oxidize ammonia to nitrogen. At high temperature, however, both step and terrace perform comparably in rate to selectively produce nitric oxide. While N 2 is always the thermodynamic product, relative N and O coverages interact to make NO the kinetic product at high temperature. The predicted rate and selectivity are consistent with experiments. We further show rate-controlling steps on the two Pt surfaces are different at low temperature but are the same at high temperature. The degrees of selectivity control for elementary reactions are comparable for the two surfaces. Finally, we demonstrate the flows of elementary reactions in the reaction network are also structure- and temperature-dependent.},
+author = {Ma, Hanyu and Schneider, William F.},
+doi = {10.1021/acscatal.8b04251},
+issn = {21555435},
+journal = {ACS Catalysis},
+keywords = {active site,ammonia activation,density functional theory,kinetic and thermodynamic control,microkinetic modeling,platinum,structure sensitivity,temperature-dependent catalysis},
+month = {mar},
+number = {3},
+pages = {2407--2414},
+publisher = {American Chemical Society},
+title = {{Structure- and Temperature-Dependence of Pt-Catalyzed Ammonia Oxidation Rates and Selectivities}},
+volume = {9},
+year = {2019}
+}
+
 @article{Chen2018,
 author = {Jingguang G. Chen  and Richard M. Crooks  and Lance C. Seefeldt  and Kara L. Bren  and R. Morris Bullock  and Marcetta Y. Darensbourg  and Patrick L. Holland  and Brian Hoffman  and Michael J. Janik  and Anne K. Jones  and Mercouri G. Kanatzidis  and Paul King  and Kyle M. Lancaster  and Sergei V. Lymar  and Peter Pfromm  and William F. Schneider  and Richard R. Schrock },
 title = {Beyond fossil fuel–driven nitrogen transformations},
@@ -734,13 +791,43 @@ volume = {6},
 year = {2004}
 }
 
-@techreport{RestaSupplementary,
-abstract = {NAP-XPS data treatment},
-author = {Resta, Andrea and Hejral, Uta and Blomberg, Sara and Albertin, Stefano and Vlad, Alina and Garreau, Yves and Chatelier, Corentin and Venturini, Federica and Ferrer, Pilar and Held, Georg and Grinter, Dave and Lundgren, Edvin and Coati, Alessandro},
-doi = {10.1021/acs.jpcc.0c07128},
-issn = {19327455},
-title = {{NAP-XPS on SiOx}},
-year = {2020}
+@article{Fisher1980,
+title = {The interaction of water with the Pt(111) surface},
+journal = {Surface Science},
+volume = {94},
+number = {2},
+pages = {446-455},
+year = {1980},
+issn = {0039-6028},
+doi = {https://doi.org/10.1016/0039-6028(80)90018-7},
+author = {Galen B. Fisher and John L. Gland},
+abstract = {The interaction of water with a platinum (111) surface has been examined by thermal desorption (TDS), ultraviolet photoemission (UPS), and X-ray photoemission (XPS) spectroscopies. UPS and XPS results indicate that water adsorbs molecularly at 100K. TDS studies show that water desorbs with approximately zero order kinetics and that a monolayer of water has a maximum desorption rate at 180 K. Heavier coverages exhibit additional desorption from multilayer water (ice) which peaks at temperatures near 165 K. The coadsorption of atomic oxygen with water leads to an increase in the desorption temperature of water of about 30 K. XPS studies of this surface indicate that adsorbed OH species are involved in the reaction mechanism which increases the water desorption temperature.}
+}
+
+@article{Peuckert1984,
+title = {Characterization of oxidized platinum surfaces by X-ray photoelectron spectroscopy},
+journal = {Surface Science},
+volume = {145},
+number = {1},
+pages = {239-259},
+year = {1984},
+issn = {0039-6028},
+doi = {https://doi.org/10.1016/0039-6028(84)90778-7},
+author = {M. Peuckert and H.P. Bonzel},
+abstract = {Various adlayers were grown on the (111) surface of a platinum crystal by four different oxidizing treatments. The resulting surface phases were characterized by X-ray photoelectron spectroscopy. According to the Pt 4f and O 1s XPS spectra, treatment in 0.1 MPa O2 at 900 K yielded about two monolayers of PtO2; anodic polarization in 0.5M H2SO4 acid electrolyte at 3 V versus standard hydrogen electrode gave a thick (> 5 nm) layer of Pt(OH)4, while by polarization in 1M NaOH base electrolyte at 3 V versus Ag/AgCl reference electrode a thick film of an oxyhydroxide (approximately PtO(OH)2) was formed. Etching in boiling conc. HNO3 led to a thin layer of about 1 nm of a hydrated oxide, PtO2 · xH2O. Identification of the different surface phases was supported by comparative experiments with bulk PtO2. The thermal stability of all compounds was investigated by heating the samples in ultrahigh vacuum. They all decomposed at about 400 K. Initially, not a pure metal phase was formed, but a mixed phase containing Pt metal and oxide, which was stable over a wide temperature range. No oxygen could be detected on the surface at 1070 K by XPS or Auger spectroscopy.}
+}
+
+@article{Derry1984,
+title = {High coverage states of oxygen adsorbed on Pt(100) and Pt(111) surfaces},
+journal = {Surface Science},
+volume = {140},
+number = {1},
+pages = {165-180},
+year = {1984},
+issn = {0039-6028},
+doi = {https://doi.org/10.1016/0039-6028(84)90389-3},
+author = {G.N. Derry and P.N. Ross},
+abstract = {Oxygen adsorption on the Pt(100) and Pt(111) surfaces was investigated using X-ray photo-emission and thermal desorption spectroscopies. Low pressure (ca. 10−5 Pa) oxygen dosing at near ambient crystal temperature resulted in the formation of dissociated adsorbed species at saturation coverages of nominally 0.2–0.25 monolayer on both surfaces. The combination of higher pressure (ca. 10−3 Pa) and higher surface temperature (570 K) dosing produced a three to five times higher saturation coverage than the low pressure dosing. The effect of dosing condition on the saturation coverage appears to reconcile apparent discrepancies for the Pt(100) surface in the literature. Characterization by XPS of the higher coverage state for oxygen showed that it is in the same chemical state as the oxygen adsorbed at very low coverage. Angle-resolved XPS has shown that in all cases the oxygen appears to reside on the surface with no significant penetration of oxygen into the bulk, as would be characteristic of oxidation. However, some penetration on the surface by oxygen, such as by a place-exchange type restructuring of the first two atomic layers, cannot be entirely ruled out.}
 }
 
 @article{BradleyShumbera2007a,
@@ -2701,12 +2788,49 @@ author = {J.P. Contour and G. Mouvier and M. Hoogewys and C. Leclere},
 abstract = {Scanning electron microscopy, X-ray photoelectron spectroscopy (XPS) and sputtering techniques are used to study platinum-rhodium gauzes working in industrial burners for ammonia oxidation. Electron microscopy shows that during the combustion, two distinct crystalline systems develop, namely, small rhodium-rich crystals and large platinum-rich geometric crystals with well-developed facets. Chemical analysis of the surface by XPS associated with ion sputtering shows that the catalyst deactivation may be caused by the segregation of rhodium at the surface, resulting from the volatilization of platinum oxide at high temperature after the oxidation of Rh and Pt. The small rhodium-rich crystals are identified as Rh2O3 and the oxidation ratio (Rh2O3Rh + Rh2O3) varies with the location of the gauzes in the catalytic pack: it is 0.2 at the head of the reactor and reaches up to 0.8 in the tail.}
 }
 
+@article{Kiskinova1984,
+title = {No adsorption on Pt(111)},
+journal = {Surface Science},
+volume = {136},
+number = {2},
+pages = {285-295},
+year = {1984},
+issn = {0039-6028},
+doi = {https://doi.org/10.1016/0039-6028(84)90612-5},
+author = {M. Kiskinova and G. Pirug and H.P. Bonzel},
+abstract = {The interaction of NO with a Pt(111) surface was studied by means of XPS, LEED and AES at 120 K and 305 K. The observed changes in the valence and O(1s) and N(1s) core level spectra during NO adsorption and stepwise heating of the adsorbed layer as well as the estimated O : N atomic ratios supported molecular NO adsorption on Pt(111). The NO saturation coverage was found to increase from 0.23 at 305 K to 0.54 at 120 K. At both adsorption temperatures and at coverages less than 0.15 only a single adsorption state was populated characterized by an O(1s) binding energy of 530.6 eV and a dipole moment of 0.42 D, negative end outwards. At higher coverages, a second state characterized by an O(1s) binding energy of 532.5 eV appeared. These two states are associated with bridge and linearly bonded NO, respectively, in accordance with existing vibrational data. For high NO coverages achieved after adsorption at 120 K the XPS O(1s) spectra produce evidence of an adsorbed NO species characterized by an O(1s) binding energy of ~ 531.1 eV. This species may correspond to disordered NO molecules unobservable by infra-red spectroscopy.}
+}
+
+@article{Scheibe2008,
+author = {Scheibe, A and Bluhm, H and Haevecker, M and Kleimenov, E and Schlo, R and Imbihl, R},
+journal = {Journal of Physical Chemistry C},
+number = {39},
+pages = {15382--15393},
+title = {{In Situ X-ray Photoelectron Spectroscopy of Catalytic Ammonia Oxidation over a Pt (533) Surface}},
+volume = {112},
+year = {2008}
+}
+
+@article{Scheibe2005,
+title = {Kinetics of ammonia oxidation on stepped platinum surfaces. I. Experimental results},
+journal = {Surface Science},
+volume = {577},
+number = {1},
+pages = {1-14},
+year = {2005},
+issn = {0039-6028},
+doi = {https://doi.org/10.1016/j.susc.2004.12.027},
+author = {A. Scheibe and U. Lins and R. Imbihl},
+keywords = {Platinum, Stepped platinum surface, Ammonia oxidation, Kinetics},
+abstract = {The kinetics of ammonia oxidation with oxygen have been investigated in the 10−5 and 10−4mbar range on Pt(533) and Pt(443). Only N2 and NO but no N2O were detected as reaction products. The dependence of product formation on temperature and on the partial pressures of the reactants has been studied under steady state conditions. The reactive sticking coefficients were determined under reaction conditions with sreac of ammonia reaching nearly 0.2. The Pt(533) surface was found to be catalytically more active than Pt(443) by a factor of 2–4.}
+}
+
 @Article{Fierro1992,
 author={Fierro, J. L. G. and Palacios, J. M. and Tomas, F.},
 title={Characterization of catalyst and catchment gauzes used in medium- and low-pressure ammonia oxidation plants},
 journal={Journal of Materials Science},
 year={1992},
-month={Feb},
+month={02},
 day={01},
 volume={27},
 number={3},
@@ -3367,7 +3491,6 @@ year = {2008}
 
 @article{Valvidares2005,
 author = {Valvidares, M.},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Valvidares - 2005 - Relationship between Structure and Magnetic Anisotropy of Ultrathin Epitaxial Cobalt films on Platinum substrates.pdf:pdf},
 journal = {Surface Science},
 title = {{Relationship between Structure and Magnetic Anisotropy of Ultrathin Epitaxial Cobalt films on Platinum substrates}},
 year = {2005}
@@ -4632,6 +4755,19 @@ volume = {29},
 year = {2012}
 }
 
+@article{Kondratenko2006,
+title = {Distinct activity and time-on-stream behavior of pure Pt and Rh metals and Pt–Rh alloys in the high-temperature N2O decomposition},
+journal = {Applied Catalysis A: General},
+volume = {298},
+pages = {73-79},
+year = {2006},
+issn = {0926-860X},
+doi = {https://doi.org/10.1016/j.apcata.2005.09.022},
+author = {Evgueni V. Kondratenko and Ralph Kraehnert and Joerg Radnik and Manfred Baerns and Javier Pérez-Ramírez},
+keywords = {NO decomposition, Pt, Rh, Pt–Rh alloy, High-temperature reactions, Deactivation, RhO and restructuring of Pt},
+abstract = {The effect of reaction conditions and rhodium content in H2-pretreated Pt–Rh materials on their initial activity and time-on-stream behavior in direct N2O decomposition at 1023K was investigated by means of continuous-flow catalytic tests at ambient pressure and X-ray photoelectron spectroscopy (XPS) analysis before and after catalytic tests. Reduced pure Pt (Pt100) gauze shows a slightly higher initial activity (after 10min on stream) in the reaction than reduced pure Rh (Rh100) wire. The initial N2O conversion over various Pt–Rh alloys (95–5, 90–10, and 80–20) was considerably lower than that of the pure metals. The following order of initial activity was obtained: Pt100>Rh100>Pt95–Rh5>Pt90–Rh10>Pt80–Rh20. However, Pt100 gauze rapidly deactivates with time-on-stream. This deactivation is tentatively attributed to the penetration of oxygen (generated upon N2O decomposition) into the bulk of the metal. In contrast to Pt100 gauze, Rh100 wire activates with time-on-stream leading to a significantly enhanced and stable N2O conversion. The activity trend after 900min on stream is changed to: Rh100>Pt95–Rh5>Pt90–Rh10>Pt80–Rh20>Pt100. The different catalytic performance of Rh is related to the gradual transformation of metallic Rh to Rh2O3 under reaction conditions as concluded from surface composition obtained by XPS analyses. Our results indicate that the Pt–Rh alloy gauzes are inactive for direct N2O decomposition in the presence of excess oxygen, as typically found in ammonia burners.}
+}
+
 @article{Pfeiffer2018,
 abstract = {X-ray ptychographic microscopy combines the advantages of raster scanning X-ray microscopy with the more recently developed techniques of coherent diffraction imaging. It is limited neither by the fabricational challenges associated with X-ray optics nor by the requirements of isolated specimen preparation, and offers in principle wavelength-limited resolution, as well as stable access and solution to the phase problem. In this Review, we discuss the basic principles of X-ray ptychography and summarize the main milestones in the evolution of X-ray ptychographic microscopy and tomography over the past ten years, since its first demonstration with X-rays. We also highlight the potential for applications in the life and materials sciences, and discuss the latest advanced concepts and probable future developments.},
 author = {Pfeiffer, Franz},
@@ -4672,7 +4808,6 @@ year = {2016}
 abstract = {High-resolution X-ray photoelectron spectroscopy (XPS) and temperature-programmed XPS at BESSY II have been applied to investigate the adsorption and desorption of NO on a Pt(1 1 1) surface. The coverage and temperature-dependent bonding configurations of NO have been identified from adsorbate O 1s and substrate Pt 4f7/2 core-level photoemission spectra, which were collected in situ during NO uptake or heating with data collection times per spectrum between 4 and 7 s. At 110 K, NO molecularly adsorbs on Pt(1 1 1) and sequentially populates three different adsorption sites. Up to coverages of 0.25 ML, only fcc-hollow sites are occupied, leading to the formation of a (2 × 2)-NO adsorbate structure. As coverage increases, in addition on-top sites are populated until at 0.5 ML a (2 × 2)-2NO structure is formed, which also represents the saturation structure at 250 K. Further increasing the coverage at 110 K leads to the occupation of hcp-hollow sites; at saturation, a (2 × 2)-3NO structure is observed with a coverage of 0.75 ML. Upon heating, the desorption of NO from the hcp-hollow sites gives rise to a desorption peak at 190 K. Further heating induces the desorption of on-top NO species starting at 275 K and fcc-hollow NO species starting at 320 K. No dissociation takes place. {\textcopyright} 2003 Elsevier Science B.V. All rights reserved.},
 author = {Zhu, J. F. and Kinne, M. and Fuhrmann, T. and Denecke, R. and Steinr{\"{u}}ck, H. P.},
 doi = {10.1016/S0039-6028(03)00298-X},
-file = {:home/david/Documents/PhD/Papers/Zhu et al. - 2003 - In situ high-resolution XPS studies on adsorption .pdf:pdf},
 issn = {00396028},
 journal = {Surface Science},
 keywords = {Chemisorption,Low energy electron diffraction (LEED),Nitrogen oxides,Platinum,Surface structure, morphology, roughness, and topo,Synchrotron radiation photoelectron spectroscopy,Thermal desorption},
@@ -5607,6 +5742,47 @@ keywords = {coherent X-ray Bragg diffraction imaging, Bragg ptychography, scatte
    pages = {C01069}
 }
 
+@Article{Lindblad2009,
+author ="Lindblad, A. and Bergersen, H. and Pokapanich, W. and Tchaplyguine, M. and Öhrwall, G. and Björneholm, O.",
+title  ="Charge delocalization dynamics of ammonia in different hydrogen bonding environments: free clusters and in liquid water solution",
+journal  ="Phys. Chem. Chem. Phys.",
+year  ="2009",
+volume  ="11",
+issue  ="11",
+pages  ="1758-1764",
+publisher  ="The Royal Society of Chemistry",
+doi  ="10.1039/B815657C",
+abstract  ="Valence and core level photoelectron spectra and Auger electron spectra of ammonia in pure clusters have been measured. The Auger electron spectra of gas-phase ammonia{,} pure ammonia clusters and ammonia in aqueous solution are compared and interpreted via ab initio calculations of the Auger spectrum of the ammonia monomer and dimer. The calculations reveal that the final two-hole valence states can be delocalized over both ammonia molecules. Features at energies pertaining to delocalized states involving one{,} or more{,} hydrogen bonding orbitals can be found in both the ammonia cluster Auger electron spectrum and in that of the liquid solvated molecule. The lower Coulombic repulsion between two delocalized valence final state holes gives higher kinetic energy of the Auger electrons which is also observed in the spectra. This decay path—specific to the condensed phase—is responsible for more than 5% of the total cluster Auger intensity. Moreover{,} this interpretation is also applicable to the solid phase since the same features have been observed{,} but not assigned{,} in the Auger spectrum of solid ammonia."
+}
+
+@article{BradleyShumbera2006,
+title = {Adsorption of gas-phase oxygen atoms on Pt(100)-hex-R0.7°: Evidence of a metastable chemisorbed phase},
+journal = {Surface Science},
+volume = {600},
+number = {14},
+pages = {2928-2937},
+year = {2006},
+issn = {0039-6028},
+doi = {https://doi.org/10.1016/j.susc.2006.05.040},
+author = {{Bradley Shumbera}, R. and Kan, Heywood H. and Weaver,  Jason F.},
+keywords = {Platinum, Atomic oxygen, Atom-solid interactions, Desorption, Single crystal surfaces},
+abstract = {We utilized temperature programmed desorption (TPD) and low energy electron diffraction (LEED) to study the chemisorption of gas-phase oxygen atoms on Pt(100)-hex-R0.7° at 450K and 573K, and find that the types and relative populations of oxygen phases that develop are highly dependent on the surface temperature during adsorption. At both temperatures, oxygen atoms initially adsorb on defects associated with the surface reconstruction. Increasing the coverage to about 0.32ML (monolayers) at 573K causes deconstruction and population of a phase with apparent (3×1) symmetry that desorbs in a single feature centered at about 672K. Saturating at 0.63ML leads to the formation of an additional “complex” ordered phase that desorbs in a sharp feature exhibiting autocatalytic behavior as it shifts from approximately 631K to 642K. Uptake at 450K also initiates deconstruction, but in this case two desorption maxima at about 652K and 672K grow simultaneously with increasing coverage to about 0.32ML. The feature at 672K is associated with the disordered (3×1) phase, while the feature at 652K has not been previously reported. We attribute this new feature to desorption from disordered arrangements of high oxygen concentrations on (1×1) surface regions. As the coverage increases to about 0.51ML, small amounts of the complex phase grow, while this “high-concentration” (1×1) and the (3×1) phases continue to develop. We conclude that the complex phase is energetically preferred over the high-concentration (1×1) phase, but kinetic barriers hinder its formation at 450K, causing oxygen to become trapped in the high-concentration (1×1) phase. Therefore, the high-concentration (1×1) phase is metastable relative to the complex phase. Lastly, above about 0.51ML, further adsorption at 450K promotes the growth of Pt oxide islands as detailed in a future investigation.}
+}
+
+@article{Rienks2003,
+    author = {Rienks, E. D. L. and Bakker, J. W. and Baraldi, A. and Carabineiro, S. A. C. and Lizzit, S. and Weststrate, C. J. and Nieuwenhuys, B. E.},
+    title = "{The reduction of NO on Pt(100) by H2 and CO studied with synchrotron x-ray photoelectron spectroscopy}",
+    journal = {The Journal of Chemical Physics},
+    volume = {119},
+    number = {12},
+    pages = {6245-6252},
+    year = {2003},
+    month = {09},
+    abstract = "{Using synchrotron radiation x-ray photoelectron spectroscopy we have determined the surface composition during the reduction reactions of nitric oxide with hydrogen and carbon monoxide on Pt(100). It is found that NO dissociates readily on this surface and that the dissociation product oxygen is only partially removed by reducing agents H2 and CO. Two oxygen species have been identified after NO dissociation, and they appear to react with H2 and CO at different rates. With increasing total pressures in the NO–H2 reaction, new N-containing surface species are observed. Some preliminary results are presented concerning the reduction of NO in the presence of both CO and H2. For this system partially hydrogenated CO molecules are found in addition to partially hydrogenated N-species.}",
+    issn = {0021-9606},
+    doi = {10.1063/1.1602059},
+}
+
 @article{Chen2012,
 author ="Chen, Qing-Song and Vidal-Iglesias, Francisco J. and Solla-Gullón, José and Sun, Shi-Gang and Feliu, Juan M.",
 title  ="Role of surface defect sites: from Pt model surfaces to shape-controlled nanoparticles",
@@ -6288,7 +6464,7 @@ author={Dann, Ellie K. and Gibson, Emma K. and Blackmore, Rachel H. and Catlow, 
 title={Structural selectivity of supported Pd nanoparticles for catalytic NH3 oxidation resolved using combined operando spectroscopy},
 journal={Nature Catalysis},
 year={2019},
-month={Feb},
+month={02},
 day={01},
 volume={2},
 number={2},
@@ -7026,6 +7202,30 @@ series = {PEARC17}
    title = {Python for Data Analysis: Data Wrangling with Pandas, NumPy, and IPython},
    volume = {15},
    year = {2017},
+}
+
+@article{Linford2019,
+author = {Linford, Matthew R and Meyer, Michael and Thi{\ss}en, Andreas and Thi{\ss}en, Andreas and Linford, Matthew R},
+doi = {10.1116/1.5111634},
+journal = {Surface Science Spectra},
+keywords = {nap-xps,near-ambient pressure x-ray photoelectron,spectroscopy,water vapor,xps},
+publisher = {American Vacuum Society},
+title = {{Water vapor, by near-ambient pressure XPS}},
+url = {https://doi.org/10.1116/1.5111634},
+year = {2019}
+}
+
+@article{Avval2022,
+author = {Avval, Tahereh G and Chatterjee, Shiladitya and Hodges, Grant T and Bahr, Stephan and Dietrich, Paul and Thi{\ss}en, Andreas and Linford, Matthew R and Meyer, Michael and Avval, Tahereh G and Chatterjee, Shiladitya and Hodges, Grant T and Bahr, Stephan and Dietrich, Paul and Meyer, Michael and Thi{\ss}en, Andreas and Linford, Matthew R},
+doi = {10.1116/1.5100962},
+journal = {Surface Science Spectra},
+keywords = {comparison,g,nap-xps,near-ambient pressure x-ray photoelectron,o 2,oxygen,spectral category,spectroscopy,xps},
+number = {November 2019},
+publisher = {American Vacuum Society},
+title = {{Oxygen gas, O2(g), by near-ambient pressure XPS}},
+url = {https://doi.org/10.1116/1.5100962},
+volume = {2},
+year = {2022}
 }
 
 @article{Marini2021,
